Fixes #49: The unintended horizontal scroll bar (which had space to be moved so was quite bad) along the bottom on Chrome

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -98,6 +98,7 @@ body {
 	place-items: center;
 	min-width: 320px;
 	min-height: 100vh;
+	overflow-x: hidden;
 }
 
 h1 {
